fix: allow languages to be set on mobile; right align mobile menu

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -133,7 +133,9 @@ $header-height: 80px;
     border-top: solid 1px #ddd;
     border-bottom: solid 1px #ddd;
     right: 0;
-    left: 0;
+    left: auto;
+    min-width: 250px;
+    border-left: solid 1px #ddd;
     top: $header-height;
     z-index: 2;
 
@@ -384,9 +386,6 @@ a.header-link
       left: 0;
       bottom: 24px;
     }
-    
-    // margin-bottom: -4px;
-    // height: calc(100% - 10px); // don't need this because we height calc in .left-container
   }
 }
 
@@ -397,8 +396,7 @@ a.header-link
   :root:has([data-hc-page="request"]) .menu-list-mobile .ham-link_request > a {
     border-left: 4px solid #009eb9;
     margin: 0px 0 0 1.5rem !important;
-    padding: 0 0 0 5px !important;
-    /* width: calc(100% - 10px); */
+    padding: 8px 24px 8px 5px !important;
   }
 }
 
